Set up 404 html page and update gifts.js script file

--- a/server/public/gift.html
+++ b/server/public/gift.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<html>
 
   <head>
     <title></title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../style.css">
     <script defer src="/scripts/header.js"></script>
     <script defer src="/scripts/gift.js"></script>
   </head>
@@ -15,7 +15,7 @@
         </div>
         <div class="gift-details">
             <h2 id="name"></h2>
-            <p id="submitedBy"></p>
+            <p id="submittedBy"></p>
             <p id="submittedOn"></p>
             <p id="pricePoint"></p>
             <p id="audience"></p>
